📝 Update notes with minor changes ✏️

--- a/_01-HtmlBasic/index.html
+++ b/_01-HtmlBasic/index.html
@@ -1,38 +1,36 @@
-<!-- it always start with  "<!DOCTYPE html>"  its also case sensative -->
+<!-- It always starts with "<!DOCTYPE html>". It is also case sensitive. -->
 <!DOCTYPE html>
 <html lang="en">
-  <!-- its data dont show in browser its store metadata -->
+  <!-- This data doesn't show in the browser; it stores metadata. -->
 
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <!-- we have to give details like if the image is png then type is png like this  -->
+    <!-- We must specify the type, like "image/png" if the image is a PNG. -->
     <link
       rel="icon"
       type="image/png"
       href="/00 image/android-chrome-512x512.png"
-      
     />
   </head>
   <body style="background-color: black; color: white">
-    <!-- tag are not case sensative so its not probelm
-      -->
+    <!-- Tags are not case sensitive, so it's not a problem. -->
     <h3>this is third heading</h3>
-    <!-- some tags are auto closing like -->
+    <!-- Some tags are self-closing, like the one below. -->
     <br />
-    <!-- this tag give a line break-->
+    <!-- This tag gives a line break. -->
     <hr />
-    <!-- this tag give a horizontal line -->
-    <!-- there are difrent types of heading like h1 to h6 -->
+    <!-- This tag gives a horizontal line. -->
+    <!-- There are different types of headings, from h1 to h6. -->
     <h1>heading 1</h1>
     <h2>heading 2</h2>
     <h3>heading 3</h3>
     <h4>heading 4</h4>
     <h5>heading 5</h5>
     <h6>heading 6</h6>
-    <!-- there are only one  heading in a web page -->
-    <!-- if we use pre tag then its keep the format as it is we give -->
+    <!-- There should be only one h1 heading on a web page. -->
+    <!-- If we use the <pre> tag, it keeps the formatting exactly as we write it. -->
     <p>
       Mayabono Biharini Horini Lyrics Mayabono biharini horini Gohono swapano
       sancharini Mayabana biharini harini Gahana shopno soncharini Keno tare
@@ -77,13 +75,13 @@
 
         Bandhono bihino sei jei bandhon okaron
     </pre>
-    <!-- em tag tells browser its impornet than rest of the line  -->
+    <!-- The <em> tag tells the browser this part is more important than the rest of the line. -->
     <p><em>RAM</em>is a good boy</p>
     <p><del>RAM</del>RAJ is a <ins>good</ins> boy</p>
-    <!-- MDN Web Docs: previously Mozilla Developer Network(MDN) and formerly Mozilla Developer Center-->
+    <!-- MDN Web Docs: Previously Mozilla Developer Network (MDN), formerly Mozilla Developer Center. -->
 
-    <!-- "blockquote" is use for useing quote in web page "cite" use for link source of the tag -->
-    <!-- for quateion mark use "q" tag-->
+    <!-- "blockquote" is used for adding a quote to the webpage. "cite" is used to link the source of the quote. -->
+    <!-- To add inline quotation marks, use the <q> tag. -->
 
     <blockquote cite="https://en.wikipedia.org/wiki/MDN_Web_Docs">
       MDN Web Docs, previously Mozilla Developer Network and formerly Mozilla
@@ -98,22 +96,22 @@
       Docs.[4] Topics include HTML5, JavaScript, CSS, Web APIs, Django, Node.js,
       WebExtensions, MathML, and others.[5]
     </blockquote>
-    <!-- for abbribation or something a hover text use "abbr" -->
+    <!-- For abbreviations or hover text, use the <abbr> tag. -->
     <p>
-      <abbr title="hyper Text Markup language">HTML </abbr>is creatd in 1991
+      <abbr title="HyperText Markup Language">HTML </abbr>was created in 1991
     </p>
-    <!-- "bdo" stand for  Bydirectional Override  "dir" need to write rtl-->
+    <!-- "bdo" stands for Bi-Directional Override. The "dir" attribute must be set, like "rtl". -->
     <bdo dir="rtl">halo name is kris</bdo>
-    <!-- linking page -->
-    <!-- for nameing page in html use small words and space use '-' -->
+    <!-- Linking pages -->
+    <!-- For naming files in HTML, use small letters and replace spaces with '-' -->
     <a href="practice-1.html">this is goes to practice-1</a>
-    <!-- so relative patha mens it have in same directory  -->
+    <!-- Relative path means the file exists in the same directory. -->
     <a href="practice-2.html">relative path</a>
-    <!-- its a absolute path exaple where it traves from the root and then find the file -->
+    <!-- This is an absolute path example, starting from the root to find the file. -->
     <a href="/01-HTML/Day3/index.html"></a>
-    <!-- for open html link in diferent tab use target -->
+    <!-- To open a link in a different tab, use the target attribute. -->
     <a target="_blank" href="google.com">Google</a>
 
-    <!-- always the aspect ratio must 2:3 -->
+    <!-- Always maintain the aspect ratio as 2:3. -->
   </body>
 </html>
