🎓 Studied HTML basics: block vs inline, div/span, entities, lists & semantics ✅

--- a/_02-HtmlStructure/index.html
+++ b/_02-HtmlStructure/index.html
@@ -6,70 +6,70 @@
     <title>html structure</title>
   </head>
   <body style="background-color: black; color: aliceblue">
-    <!-- block level emlement its cover 100% width that is available left and right and also have a padding & margine that give by browser -->
+    <!-- Block-level element: covers 100% of available width and includes default padding and margin from the browser. -->
 
     <p style="background-color: pink">halo</p>
     <p>bro</p>
-    <!-- inline elemnet are start from same line ehre previous one end -->
+    <!-- Inline elements start on the same line where the previous element ends. -->
     <a href="#">Google</a>
-    <a href="#">fackbook</a>
-    <!--    this conent anything its a block level element that use for wraper in HTML -->
+    <a href="#">facebook</a>
+    <!-- This <div> is a block-level wrapper container in HTML. -->
     <div style="background-color: blue">
       <p>
-        Lorem, ipsum dolor Lorem ipsum dolor sit amet consectetur adipisicing
-        elit. Possimus optio vel et quibusdam nulla, placeat eaque eligendi
-        recusandae labore ratione itaque voluptatem qui velit doloremque eveniet
-        repellendus. Neque, provident eum?
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus optio
+        vel et quibusdam nulla, placeat eaque eligendi recusandae labore ratione
+        itaque voluptatem qui velit doloremque eveniet repellendus. Neque,
+        provident eum?
       </p>
     </div>
-    <!-- it works as a inline elemnt container -->
+    <!-- <span> works as an inline container element. -->
     <span>
       <h5>this is 2nd heading</h5>
       <p>my <span>name</span> is ___</p>
     </span>
-    <!-- entitites and symbol -->
-    <!-- like for @ symbol need to write &#64;  &copy; for © like this -->
-    <!-- for other  space go w3 school or  or mdn docs  -->
-    <p>so the gmail is abc &#64; com</p>
-    <p>so the gmail is bcd &atilde; com</p>
-    <p>these is the sign of : &copy;</p>
-    <!-- unorder list -->
-    <!-- this list is importnet for 2 things 1. its gives a structer and 2. its give asscibility for people who can not seee or visual imband  -->
-    <!-- for unorder list  -->
+    <!-- Entities and symbols:
+         - Use &#64; for "@"
+         - Use &copy; for "©"
+         For more entities, see MDN Web Docs or W3Schools. -->
+    <p>so the email is abc &#64; com</p>
+    <p>so the email is bcd &atilde; com</p>
+    <p>this is the symbol: &copy;</p>
+    <!-- Unordered list:
+         1. Provides structure
+         2. Improves accessibility for screen readers -->
     <ul>
       <li>apple</li>
       <li>banana</li>
       <li>orange</li>
     </ul>
-    <!-- we can make it  nested -->
+    <!-- Nested lists are allowed -->
     <ul>
-      <li><h4>first name</h4></li>
+      <li><h4>First Name</h4></li>
       <ul>
         <li>ram</li>
         <li>sam</li>
         <li>lucifer</li>
       </ul>
-      <li><h4>last name</h4></li>
+      <li><h4>Last Name</h4></li>
       <ul>
         <li>roy</li>
         <li>sutta</li>
         <li>Morningstar</li>
       </ul>
     </ul>
-    <!-- orderlist  -->
+    <!-- Ordered list -->
     <ol>
       <li>apple</li>
       <li>banana</li>
       <li>orange</li>
-
       <ol>
-        <li><h4>first name</h4></li>
+        <li><h4>First Name</h4></li>
         <ol>
           <li>ram</li>
           <li>sam</li>
           <li>lucifer</li>
         </ol>
-        <li><h4>last name</h4></li>
+        <li><h4>Last Name</h4></li>
         <ol>
           <li>roy</li>
           <li>sutta</li>
@@ -78,17 +78,16 @@
       </ol>
     </ol>
 
-    <!-- description list  -->
+    <!-- Description list -->
     <dl>
-      <!-- description list-->
       <dt>HTML</dt>
-      <!--defination tarm -->
-      <dd>Hyper text markup language</dd>
-      <!-- description data-->
+      <!-- Definition term -->
+      <dd>HyperText Markup Language</dd>
+      <!-- Definition description -->
       <dt>CSS</dt>
-      <dd>Cascading style sheets</dd>
+      <dd>Cascading Style Sheets</dd>
     </dl>
     <aside>halo what is going on</aside>
-    <h1>halo workd</h1>
+    <h1>halo world</h1>
   </body>
 </html>
