build Dashlane landing page

--- a/_02-CSS/_00-CSS-OneShot/index2.html
+++ b/_02-CSS/_00-CSS-OneShot/index2.html
@@ -22,5 +22,7 @@
       <div class="child-1">child7</div>
       <div id="childno8" class="child-1">child8</div>
     </div>
+    <div class="box" id="box-model-1">Halo</div>
+    <div class="box" id="box-model-2">World</div>
   </body>
 </html>
