changed the title

--- a/_03-JavaScript/_01-JavaScript-fundamental-1/index.html
+++ b/_03-JavaScript/_01-JavaScript-fundamental-1/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body style="background-color: black">
+    changed the title
     <script src="./script.js"></script>
   </body>
 </html>
