learn javascript object & Do some challnges

--- a/_03-JavaScript/_00-practice/_00-index.html
+++ b/_03-JavaScript/_00-practice/_00-index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body style="background-color: black">
-    <script src="./_00-script.js"></script>
+    <!-- <script src="./_00-script.js"></script> -->
+    <script src="/_03-JavaScript/_00-practice/_02-JavaScript-fundamental-2_practice.js"></script>
   </body>
 </html>
