add again button in game

--- a/_03-JavaScript/_03-JavaScript-in-the-Browser-DOM-an-Events/project-1/index.html
+++ b/_03-JavaScript/_03-JavaScript-in-the-Browser-DOM-an-Events/project-1/index.html
@@ -138,7 +138,7 @@
   </head>
   <body>
     <div class="main-1">
-      <button type="submit" class="btn-again">Again</button>
+      <button type="submit" id="agian" class="btn-again">Again</button>
       <p id="range">&#60;Between 1 and 20 &#62;</p>
     </div>
     <div class="main-2">
